--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <div class="c-wrapper">
-      <img src="./img/foto.png" alt="" />
+      <img src="./img/foto.png" alt="" class="" class="c-wrapper__foto" />
+      <img src="./img/filtro.png" alt="" class="c-wrapper__filtro" />
     </div>
   </body>
 </html>
